--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -26,6 +26,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: install dep
+        run: npm install
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup Pages
@@ -46,10 +48,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Install Dependencies
-        run: npm install
-      - name: deploy
-        run: npm run host
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+      - name: depl final
+        run: npm run host
