--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -26,7 +26,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-
+      - name: instal dep
+        run: npm install
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup Pages
