--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: instal dep
-        run: cd portfolio-frontend-reimagined
+        run: cd portfolio-frontend-reimagined &&
              npm install
       - name: Checkout
         uses: actions/checkout@v4
