--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,7 @@ http {
   # Redirect HTTP to HTTPS
   server {
     listen 80;
-    server_name oural.dev;
+    server_name edl360.fr;
 
     location / {
       root   /app;
