--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -22,17 +22,12 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-      
   # Build job
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: check fimes
+        uses: actions/checkout@v3
       - name: instal dep
         run: npm install
       - name: Checkout
