--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "vue-tsc": "^1.2.0"
   }
   "scripts": {
-  ...
-  "build": "npm run build",
-  ...
+  
+  "build": "npm run build-only",
+  
+
 }
 }
