--- a/nginx.conf
+++ b/nginx.conf
@@ -8,8 +8,7 @@ events {
 }
 
 http {
-  include       /etc/nginx/mime.types;
-  default_type  application/octet-stream;
+  include       /etc/nginx/mime.types;  default_type  application/octet-stream;
   log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
@@ -18,6 +17,14 @@ http {
   keepalive_timeout  65;
 
   # Redirect HTTP to HTTPS
+
+  server {
+    listen 443 ssl;
+    ssl_certificate /fullchain.pem;
+    ssl_certificate_key /privkey.pem;
+    root /app;
+    server_name edl360.fr;
+}
   server {
     listen 80;
     server_name edl360.fr;
