--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,33 +7,11 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
      - uses: actions/checkout@v4
-     
-     - name: Set up Docker Buildx
-       uses: docker/setup-buildx-action@v1
-
-     - name: Login to GitHub Container Registry
-       uses: docker/login-action@v3
+     - name: build push   
+       uses: GlueOps/github-actions-build-push-containers@v0.4.1
        with:
-         registry: ghcr.io
-         username: ${{ github.actor }}
-         password: ${{ secrets.GITHUB_TOKEN }}
-
-
-     - name: Build and push
-       uses: docker/build-push-action@v2
-       with:
-          platforms: linux/x86
-          build-args: |
-            APP_RELEASE=${{ github.sha }}
-          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:cache
-          cache-to: type=registry,ref=ghcr.io/${{ github.repository }}:cache,mode=max
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: latest
-          labels: ${{ steps.meta.outputs.labels }}
+         image_name: portfolio
