--- a/nginx.conf
+++ b/nginx.conf
@@ -8,58 +8,62 @@ events {
 }
 
 http {
-  include       /etc/nginx/mime.types;  default_type  application/octet-stream;
+  include       /etc/nginx/mime.types;  
+  default_type  application/octet-stream;
+  
   log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
+  
   access_log  /var/log/nginx/access.log  main;
   sendfile        on;
   keepalive_timeout  65;
 
   # Redirect HTTP to HTTPS
 
- server {
-    listen 443 ssl;
-    ssl_certificate /fullchain.pem;
-    ssl_certificate_key /privkey.pem;
-    server_name edl360.fr;
+  server {
+      listen 443 ssl;
+      ssl_certificate /fullchain.pem;
+      ssl_certificate_key /privkey.pem;
+      server_name edl360.fr;
 
-    location / {
-        root   /app;
-        index  index.html;
-        try_files $uri $uri/ /index.html;
-    }
+      location / {
+          root   /app;
+          index  index.html;
+          try_files $uri $uri/ /index.html;
+      }
 
-    location /wake {
-        proxy_pass http://wol-server:4000/wake; # Use Docker container name
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
+      location /wake {
+          proxy_pass http://wol-server:4000/wake; # Use Docker container name
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+      }
 
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
-}
+      error_page 500 502 503 504 /50x.html;
+      location = /50x.html {
+          root /usr/share/nginx/html;
+      }
+  }
 
-server {
-    listen 80;
-    server_name edl360.fr;
+  server {
+      listen 80;
+      server_name edl360.fr;
 
-    location / {
-        root   /app;
-        index  index.html;
-        try_files $uri $uri/ /index.html;
-    }
+      location / {
+          root   /app;
+          index  index.html;
+          try_files $uri $uri/ /index.html;
+      }
 
-    location /wake {
-        proxy_pass http://wol-server:4000/wake; # Use Docker container name
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
+      location /wake {
+          proxy_pass http://wol-server:4000/wake; # Use Docker container name
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+      }
 
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
+      error_page 500 502 503 504 /50x.html;
+      location = /50x.html {
+          root /usr/share/nginx/html;
+      }
+  }
 }
