--- a/nginx.conf
+++ b/nginx.conf
@@ -22,28 +22,29 @@ http {
   # Redirect HTTP to HTTPS
 
   server {
-      listen 443 ssl;
-      ssl_certificate /fullchain.pem;
-      ssl_certificate_key /privkey.pem;
-      server_name edl360.fr;
+    listen 443 ssl;
+    ssl_certificate /fullchain.pem;
+    ssl_certificate_key /privkey.pem;
+    server_name edl360.fr;
 
-      location / {
-          root   /app;
-          index  index.html;
-          try_files $uri $uri/ /index.html;
-      }
+    location / {
+        root   /app;
+        index  index.html;
+        try_files $uri $uri/ /index.html;
+    }
 
-      location /wake {
-          proxy_pass http://wol-server:4000/wake; # Use Docker container name
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-      }
+    location /wake {
+        proxy_pass http://wol-server:8080; # Forward to WOL API service
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 
-      error_page 500 502 503 504 /50x.html;
-      location = /50x.html {
-          root /usr/share/nginx/html;
-      }
-  }
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
+}
+
 
   server {
       listen 80;
